feat: add Algolia API key configuration and update deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ concurrency:
 jobs:
   # Build job
   build:
+    env:
+      ANGOLIA_API_KEY: ${{secrets.ANGOLIA_API_KEY}}
+      ANGOLIA_APP_ID: ${{secrets.ANGOLIA_APP_ID}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
